examples_k8s/traefik/traefik-middleware-basicauth.yaml
## BasicAuth

## https://doc.traefik.io/traefik/middlewares/http/basicauth/ (Tabs: Kubernetes)
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: basic-auth
    removeHeader: true
